objects/Staff_Relationship__c.object
<CustomObject>
    <description>One staff member may be related to one or many other staff members for a variety of reasons. In each case, the nature of that relationship is recorded here, and is typified by the two people in the relationship, the nature of the relationship, and the effective dates.</description>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>SR{0}</displayFormat>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Employee_User_Record__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Contact.Employee_User_Record__r.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Staff Relationships (From)</relationshipLabel>
        <relationshipName>Staff_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Relationship_Type__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Relationship_Type__c</referenceTo>
        <relationshipLabel>Staff Relationships</relationshipLabel>
        <relationshipName>Staff_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SR_Name__c</fullName>
        <description>This Field is for Internal use only.</description>
        <formula>From__r.FirstName + &apos; &apos; + From__r.LastName + &apos; - &apos; + To__r.FirstName + &apos; &apos; + To__r.LastName + &apos; : &apos; + Relationship__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SR Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Employee_User_Record__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Contact.Employee_User_Record__r.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Staff Relationships</relationshipLabel>
        <relationshipName>Staff_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Staff Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Current_Staff_Relationships</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Relationship__c</columns>
        <columns>From__c</columns>
        <columns>To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Current Staff Relationships</label>
    </listViews>
    <listViews>
        <fullName>Future_Staff_Relationships</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Relationship__c</columns>
        <columns>From__c</columns>
        <columns>To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Future Staff Relationships</label>
    </listViews>
    <listViews>
        <fullName>Past_Staff_Relationships</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Relationship__c</columns>
        <columns>From__c</columns>
        <columns>To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Past Staff Relationships</label>
    </listViews>
    <nameField>
        <label>Staff Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staff Relationships</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VR_Appropriate_Effective_Dates</fullName>
        <active>true</active>
        <description>End Date should be greater then Start date.</description>
        <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>The Start date cannot be later than the End date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_To_And_From_Relationship</fullName>
        <active>true</active>
        <errorConditionFormula>From__c  =  To__c</errorConditionFormula>
        <errorDisplayField>To__c</errorDisplayField>
        <errorMessage>The relationship cannot be from and to the same Staff Member.</errorMessage>
    </validationRules>
</CustomObject>